# Tiny

./: .env  README.md  README_EN.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: chat.py  health.py  skill.py  trace.py
backend/app/core/: tracing.py
backend/app/core/agent/: base.py  intent_parser.py  skill_dispatcher.py
backend/app/core/skill/: base.py  executor.py  registry.py
backend/app/schemas/: request.py  response.py  skill.py
backend/app/services/: llm_provider.py  travel_provider.py  weather_provider.py
backend/app/skills/deepseek_llm/: SKILL.md  script.py
backend/app/skills/deepseek_llm/reference/: system_prompts.json
backend/app/skills/travel_planner/: SKILL.md  script.py
backend/app/skills/travel_planner/reference/: popular_spots.json
backend/app/skills/weather_query/: SKILL.md  script.py
backend/app/skills/weather_query/reference/: city_codes.json
backend/tests/: test_dispatcher.py  test_encoding.py  test_executor_detail.py  test_final.py  test_port8002.py  test_script_output.py  test_stream.py  test_sync.py  test_utf8_env.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/components/: ChatMessage.vue  MarkdownRenderer.vue  SkillStatus.vue
frontend/src/composables/: useSkillStatus.ts
frontend/src/stores/: chat.ts
frontend/src/types/: skill.d.ts
frontend/src/views/: ChatPage.vue
